[package]
name = "mandelsnot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22", default_features = false, features = ["wgpu"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.10"
bytemuck = "1"
